# quadratic_qaoa

./: .gitignore  README.md  setup.cfg
src/quadratic_qaoa/: __init__.py  quadratic_qaoa.py
