[metadata]
name = quadratic-qaoa-sami-b95
version = 0.0.1
author = Sami Boulebnane
author_email = sami_b95@hotmail.fr
description = A package to compute expectation values of p = 1 QAOA with a quadratic cost function
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sami-b95
project_urls =
    Bug Tracker = https://github.com/sami-b95
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy

[options.packages.find]
where = src
